<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Wide -->
    <string name="app_name">Gate</string>
    <string name="action_settings">Settings</string>
    <string name="session_shared_preferences_key">com.unlock.gate.CURRENT_SESSION_PREF</string>
    <string name="gps_shared_preferences_key">com.unlock.gate.GPS_PREF</string>
    <string name="user_auth_token_key">UserAuthToken</string>
    <string name="user_id_key">UserID</string>
    <string name="user_email_key">UserEmail</string>
    <string name="user_name_key">UserName</string>
    <string name="user_created_at_key">UserCreatedAt</string>
    <string name="user_last_gate_viewed_key">UserLastGate</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="gate_error_message">Something went wrong</string>

    <!-- UnlockGatesActivity specific -->
    <string name="unlock">Unlock</string>
    <string name="tutorial_text">Make sure you both have NFC enabled</string>

    <!-- LoginRegisterActivity specific -->
    <string name="user_email_hint">Email</string>
    <string name="user_password_hint">Password</string>
    <string name="user_full_name_hint">Full Name</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="send_email">Send Email</string>
    <string name="terms">Terms</string>
    <string name="toggle_login">Log In</string>
    <string name="toggle_registration">Register</string>
    <string name="login_register_shared_preferences_key">com.unlock.gate.LOGIN_REGISTER_PREF</string>
    <string name="gcm_preferences_key">com.unlock.gate.GCM_preferences_key</string>
    <string name="last_used_email">last_used_email</string>
    <string name="used_name_on_phone">used_name_on_phone</string>
    <string name="name_on_phone">name_on_phone</string>
    <string name="no_email_inputted">Your email is required</string>
    <string name="improper_email_format">This email isn\'t formatted properly</string>
    <string name="no_password_inputted">Your password is required</string>
    <string name="no_name_inputted">Your full name is required</string>
    <string name="forgotton_password_email_sent">Email sent</string>
    <string name="progress_dialog_server_processing_request">Robots processing...</string>
    <string name="confirm_registration_dialog_title">One more step...</string>
    <string name="confirm_registration">Honestly, the Privacy Policy and Terms of Service aren\'t written yet. We\'re hard at work trying to perfect this awesome product. When these documents are officially drafted, we\'ll send you an email. Is that alright?</string>

    <!-- VolleyErrorHandler specific -->
    <string name="volley_network_error">We couldn\'t connect to the internet</string>
    <string name="volley_no_connection_error">Check your internet connection</string>
    <string name="volley_auth_error">Gatekeeper, you are unauthorized to perform this action</string>
    <string name="volley_common_error">We made a mistake somewhere. Robots are investigating.</string>
    <string name="volley_unknown_error">We found a mistake somewhere. Robots suggest reviewing your data.</string>

    <!-- MainActivity specific -->
    <string-array name="tabs">
        <item>Feed</item>
        <item>Gates</item>
    </string-array>

    <string name="unlock_gates">Unlock Gates</string>
    <string name="unlocking_gates">Unlocking Gates...</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>

    <!-- GatesFragment specific -->
    <string name="confirm_delete_gate_message">Are you sure you want to leave this Gate?</string>
    <string name="aggregate">Aggregate</string>
    <string name="create_gate">Create a Gate</string>
    <string name="create_gate_hint">Gate name</string>
    <string name="no_gates_default">No Gates Yet</string>

    <plurals name="users_count">
        <item quantity="one">%d Gatekeeper</item>
        <item quantity="other">%d Gatekeepers</item>
    </plurals>

    <!-- FeedFragment specific -->
    <string name="no_posts_default">No Posts Yet</string>
    <string name="create_post_button">Write a Post</string>
    <string name="all_posts_loaded">End of feed</string>

    <!-- CommentsActivity specific -->
    <string name="title_activity_comments">Comments</string>
    <string name="add_comment_hint">Add a comment</string>
    <string name="no_comment_inputted">A comment can\'t be blank</string>
    <string name="over_500_characters_inputted">Limit your comment to 500 characters</string>
    <string name="no_comments_default">No Comments Yet</string>
    <string name="refresh">Refresh</string>

    <plurals name="comment_likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>

    <!-- HqActivity specific -->
    <string name="no_keys_default">No Keys Yet</string>
    <string name="expires_soon">Expires soon</string>
    <string name="confirm_delete_key_message">Are you sure you want to delete this Key?</string>

    <!-- CreatePost Dialog -->
    <string name="gate_selection_default">Select a Gate</string>
    <string name="write_post_hint">Write a post</string>
    <string name="title_dialog_create_post">Write a post</string>
    <string name="title_dialog_create_gate">Create a Gate</string>
    <string name="title_activity_unlock_gate">Select Gates To Share</string>
    <string name="title_dialog_enter_key">Enter a key</string>
    <string name="title_activity_hq">HqActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
